--- a/bootstrap_stater/src/main/resources/templates/fragments/header.html
+++ b/bootstrap_stater/src/main/resources/templates/fragments/header.html
@@ -108,8 +108,8 @@
                 <div id="collapsePayment" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">전자결재 메뉴들:</h6>
-                        <a class="collapse-item" th:href="@{/e_app/doc_list}">기안신청</a>
-                        <a class="collapse-item" th:href="@{/e_app/doc_list}">결재목록</a>
+                        <a class="collapse-item" th:href="@{/e_approval/doc_list}">기안신청</a>
+                        <a class="collapse-item" th:href="@{/e_approval/doc_list2}">결재목록</a>
                     </div>
                 </div>
             </li>
