--- a/bootstrap_stater/src/main/resources/templates/fragments/footer.html
+++ b/bootstrap_stater/src/main/resources/templates/fragments/footer.html
@@ -9,7 +9,7 @@
     <footer class="sticky-footer bg-white">
         <div class="container my-auto">
             <div class="copyright text-center my-auto">
-                <span>Copyright &copy; Your Website 2021</span>
+                <span>부산아이티윌  &copy; 심화반 프로젝트</span>
             </div>
         </div>
     </footer>
