--- a/bootstrap_stater/src/main/resources/templates/fragments/header.html
+++ b/bootstrap_stater/src/main/resources/templates/fragments/header.html
@@ -118,11 +118,11 @@
                 <div id="collapsePay" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">공지사항 메뉴:</h6>
-                        <a class="collapse-item" th:href="@{login}">기안작성</a>
-                        <a class="collapse-item" th:href="@{register}">내결재관리</a>
+                        <a class="collapse-item" th:href="@{login}">전체 공지사항</a>
+                        <a class="collapse-item" th:href="@{register}">부서별 공지사항</a>
                         <h6 class="collapse-header">회사일정 메뉴:</h6>
-                    	<a class="collapse-item" th:href="@{login}">기안작성</a>
-                        <a class="collapse-item" th:href="@{register}">내결재관리</a>
+                    	<a class="collapse-item" th:href="@{login}">전체 일정</a>
+                        <a class="collapse-item" th:href="@{register}">부서별 일정</a>
                         <h6 class="collapse-header">공통문서 메뉴:</h6>
                     	<a class="collapse-item" th:href="@{login}">사내공통 문서양식관리</a>
                     </div>
