참고페이지 버튼 추가

--- a/bootstrap_stater/src/main/resources/templates/fragments/header.html
+++ b/bootstrap_stater/src/main/resources/templates/fragments/header.html
@@ -128,6 +128,29 @@
                     </div>
                 </div>
             </li>
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapse"
+                   aria-expanded="true" aria-controls="collapsePayment">
+                    <i class="fas fa-fw fa-folder"></i>
+                    <span>참고메뉴</span>
+                </a>
+                <div id="collapse" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">참고페이지 메뉴:</h6>
+                        <a class="collapse-item" th:href="@{404}">404</a>
+                        <a class="collapse-item" th:href="@{buttons}">buttons</a>
+                        <a class="collapse-item" th:href="@{cards}">cards</a>
+                        <a class="collapse-item" th:href="@{charts}">charts</a>
+                        <a class="collapse-item" th:href="@{index2}">index2</a>
+                        <a class="collapse-item" th:href="@{tables}">tables</a>
+                        <a class="collapse-item" th:href="@{utill_animation}">utill_animation</a>
+                        <a class="collapse-item" th:href="@{utill_border}">utill_border</a>
+                        <a class="collapse-item" th:href="@{utill_color}">utill_color</a>
+                        <a class="collapse-item" th:href="@{utill_other}">utill_other</a>
+                       
+                    </div>
+                </div>
+            </li>
            
 
             <!-- Divider -->
