참고페이지

--- a/bootstrap_stater/src/main/resources/templates/fragments/header.html
+++ b/bootstrap_stater/src/main/resources/templates/fragments/header.html
@@ -128,12 +128,14 @@
                     </div>
                 </div>
             </li>
+<!--                 참고페이지 파트  -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapse"
                    aria-expanded="true" aria-controls="collapsePayment">
                     <i class="fas fa-fw fa-folder"></i>
                     <span>참고메뉴</span>
                 </a>
+
                 <div id="collapse" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">참고페이지 메뉴:</h6>
@@ -150,8 +152,9 @@
                        
                     </div>
                 </div>
+                
             </li>
-           
+           <!--                 참고페이지 파트  -->
 
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
