참고페이지 없앰

--- a/bootstrap_stater/src/main/resources/templates/fragments/header.html
+++ b/bootstrap_stater/src/main/resources/templates/fragments/header.html
@@ -68,8 +68,8 @@
                      data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">인사관리 메뉴:</h6>
-                        <a class="collapse-item" th:href="@{login}">인사현황</a>
-                        <a class="collapse-item" th:href="@{login}">인사등록</a>
+                        <a class="collapse-item" th:href="@{login2}">인사현황</a>
+                        <a class="collapse-item" th:href="@{login1}">인사등록</a>
                         <a class="collapse-item" th:href="@{login}">인사발령</a>
                         <a class="collapse-item" th:href="@{login}">조직도</a>
                     </div>
@@ -128,33 +128,6 @@
                     </div>
                 </div>
             </li>
-<!--                 참고페이지 파트  -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapse"
-                   aria-expanded="true" aria-controls="collapsePayment">
-                    <i class="fas fa-fw fa-folder"></i>
-                    <span>참고메뉴</span>
-                </a>
-
-                <div id="collapse" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">참고페이지 메뉴:</h6>
-                        <a class="collapse-item" th:href="@{404}">404</a>
-                        <a class="collapse-item" th:href="@{buttons}">buttons</a>
-                        <a class="collapse-item" th:href="@{cards}">cards</a>
-                        <a class="collapse-item" th:href="@{charts}">charts</a>
-                        <a class="collapse-item" th:href="@{index2}">index2</a>
-                        <a class="collapse-item" th:href="@{tables}">tables</a>
-                        <a class="collapse-item" th:href="@{utill_animation}">utill_animation</a>
-                        <a class="collapse-item" th:href="@{utill_border}">utill_border</a>
-                        <a class="collapse-item" th:href="@{utill_color}">utill_color</a>
-                        <a class="collapse-item" th:href="@{utill_other}">utill_other</a>
-                       
-                    </div>
-                </div>
-                
-            </li>
-           <!--                 참고페이지 파트  -->
 
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
