--- a/bootstrap_stater/src/main/resources/templates/fragments/header.html
+++ b/bootstrap_stater/src/main/resources/templates/fragments/header.html
@@ -44,7 +44,7 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">코드관리 메뉴:</h6>
-                        <a class="collapse-item" th:href="@{login}">공통코드 관리</a>
+                        <a class="collapse-item" th:href="@{/admin/commonCode}">공통코드 관리</a>
                     </div>
                 </div>
             </li>
@@ -68,10 +68,10 @@
                      data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">인사관리 메뉴:</h6>
-                        <a class="collapse-item" th:href="@{login2}">인사현황</a>
-                        <a class="collapse-item" th:href="@{login1}">인사등록</a>
-                        <a class="collapse-item" th:href="@{login}">인사발령</a>
-                        <a class="collapse-item" th:href="@{login}">조직도</a>
+                        <a class="collapse-item" th:href="@{/personnel/orgChart}">인사현황</a>
+                        <a class="collapse-item" th:href="@{/personnel/App}">인사등록</a>
+                        <a class="collapse-item" th:href="@{/personnel/Regist}">인사발령</a>
+                        <a class="collapse-item" th:href="@{/personnel/Current}">조직도</a>
                     </div>
                 </div>
             </li>
@@ -86,9 +86,9 @@
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">근태관리 메뉴:</h6>
-                        <a class="collapse-item" th:href="@{login}">출퇴근확인</a>
-                        <a class="collapse-item" th:href="@{register}">나의 근태 내역</a>
-                        <a class="collapse-item" th:href="@{login}">연차 관리</a>
+                        <a class="collapse-item" th:href="@{/attendence/commuteList}">출퇴근확인</a>
+                        <a class="collapse-item" th:href="@{/attendence/attendanceList }">나의 근태 내역</a>
+                        <a class="collapse-item" th:href="@{/attendence/annualList}">연차 관리</a>
                         <div class="collapse-divider"></div>
                     </div>
                 </div>
@@ -104,8 +104,8 @@
                 <div id="collapsePayment" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">전자결재 메뉴:</h6>
-                        <a class="collapse-item" th:href="@{login}">기안작성</a>
-                        <a class="collapse-item" th:href="@{register}">내결재관리</a>
+                       	<a class="collapse-item" th:href="@{/approval/doc_list}">기안작성</a>
+                        <a class="collapse-item" th:href="@{/approval/approval_list}">내결재관리</a>
                     </div>
                 </div>
             </li>
@@ -118,13 +118,13 @@
                 <div id="collapsePay" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">공지사항 메뉴:</h6>
-                        <a class="collapse-item" th:href="@{login}">전체 공지사항</a>
-                        <a class="collapse-item" th:href="@{register}">부서별 공지사항</a>
+                        <a class="collapse-item" th:href="@{/groupware/aNotic}">전체 공지사항</a>
+                        <a class="collapse-item" th:href="@{/groupware/eNotic}">부서별 공지사항</a>
                         <h6 class="collapse-header">회사일정 메뉴:</h6>
-                    	<a class="collapse-item" th:href="@{login}">전체 일정</a>
-                        <a class="collapse-item" th:href="@{register}">부서별 일정</a>
+                    	<a class="collapse-item" th:href="@{/groupware/aSchedule}">전체 일정</a>
+                        <a class="collapse-item" th:href="@{/groupware/eSchedule}">부서별 일정</a>
                         <h6 class="collapse-header">공통문서 메뉴:</h6>
-                    	<a class="collapse-item" th:href="@{login}">사내공통 문서양식관리</a>
+                    	<a class="collapse-item" th:href="@{/groupware/document}">사내공통 문서양식관리</a>
                     </div>
                 </div>
             </li>
