--- a/bootstrap_stater/src/main/resources/templates/fragments/header.html
+++ b/bootstrap_stater/src/main/resources/templates/fragments/header.html
@@ -86,11 +86,11 @@
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">근태관리 메뉴:</h6>
-                        <a class="collapse-item" th:href="@{/attendence/commuteList}">출퇴근확인</a>
+                        <a class="collapse-item" th:href="@{/attendence/commuteList}">출퇴근확인22</a>
                         <a class="collapse-item" th:href="@{/attendence/attendanceList }">나의 근태 내역</a>
                         <a class="collapse-item" th:href="@{/attendence/annualList}">연차 관리</a>
                         <div class="collapse-divider"></div>
-                    </div>
+                    </div>d
                 </div>
             </li>
 
