--- a/bootstrap_stater/src/main/resources/templates/fragments/header.html
+++ b/bootstrap_stater/src/main/resources/templates/fragments/header.html
@@ -71,7 +71,7 @@
                         <a class="collapse-item" th:href="@{/personnel/orgChart}">인사현황</a>
                         <a class="collapse-item" th:href="@{/personnel/App}">인사등록</a>
                         <a class="collapse-item" th:href="@{/personnel/Regist}">인사발령</a>
-                        <a class="collapse-item" th:href="@{/personnel/Currentted}">조직도</a>
+                        <a class="collapse-item" th:href="@{/personnel/Currentted}">조직도1</a>
                     </div>
                 </div>
             </li>
