--- a/bootstrap_stater/src/main/resources/templates/fragments/header.html
+++ b/bootstrap_stater/src/main/resources/templates/fragments/header.html
@@ -104,7 +104,7 @@
                 <div id="collapsePayment" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">전자결재 메뉴:</h6>
-                       	<a class="collapse-item" th:href="@{/approval/doc_list}">기안작성</a>
+                       	<a class="collapse-item" th:href="@{/approval/appr_doc_list}">기안작성</a>
                         <a class="collapse-item" th:href="@{/approval/approval_list}">내결재관리</a>
                     </div>
                 </div>
