--- a/bootstrap_stater/src/main/resources/templates/layouts/layout.html
+++ b/bootstrap_stater/src/main/resources/templates/layouts/layout.html
@@ -11,7 +11,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Dashboard</title>
+    <title>부산 아아티윌</title>
 
     <!-- Custom fonts for this template-->
     <link href="/bootstrap/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css" />
