--- a/bootstrap_stater/src/main/resources/templates/layouts/layout.html
+++ b/bootstrap_stater/src/main/resources/templates/layouts/layout.html
@@ -15,6 +15,7 @@
 
     <!-- Custom fonts for this template-->
     <link href="/bootstrap/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css" />
+    <link href="/bootstrap/vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet" />
     <link
             href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
             rel="stylesheet">
@@ -50,6 +51,9 @@
     <!-- Page level custom scripts -->
     <script src="/bootstrap/js/demo/chart-area-demo.js"></script>
     <script src="/bootstrap/js/demo/chart-pie-demo.js"></script>
+
+<!-- 	table script -->
+    <script src="/bootstrap/vender/datatables/dataTables.bootstrap4.min.js"></script>
 
 <!-- 개별 페이지 자바스크립트 영역 -->
 <th:block layout:fragment="script"></th:block>
