--- a/bootstrap_stater/src/main/resources/templates/approval/drafting_form.html
+++ b/bootstrap_stater/src/main/resources/templates/approval/drafting_form.html
@@ -18,6 +18,23 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
     <!-- Custom styles for this template-->
     <link href="/bootstrap/css/sb-admin-2.min.css" rel="stylesheet" />
+
+    <link href="https://cdn.jsdelivr.net/npm/summernote@0.9.0/dist/summernote-lite.min.css" rel="stylesheet">
+
+    <!--<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>-->
+
+    <script src="/bootstrap/vendor/jquery/jquery.min.js"></script>
+    <script src="/bootstrap/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Core plugin JavaScript-->
+    <script src="/bootstrap/vendor/jquery-easing/jquery.easing.min.js"></script>
+
+    <!-- Custom scripts for all pages-->
+    <script src="/bootstrap/js/sb-admin-2.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/summernote@0.9.0/dist/summernote-lite.min.js"></script>
+
+
 </head>
 <body id="page-top">
 <div id="wrapper">
@@ -39,19 +56,32 @@
                             <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                                 <tr>
                                     <td>일자</td>
-                                    <td colspan="4">날짜</td>
+                                    <td>
+
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td>제목</td>
-                                    <td></td>
+                                    <td>
+                                        <input type="text" name="title" class="form-control bg-light border-0 small"
+                                               placeholder="" aria-label=""
+                                               aria-describedby="basic-addon2">
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td>결재자</td>
-                                    <td></td>
+                                    <td><input type="text" name="title" class="form-control bg-light border-0 small"
+                                               placeholder="" aria-label=""
+                                               aria-describedby="basic-addon2"></td>
                                 </tr>
                                 <tr>
                                     <td>첨부</td>
                                     <td></td>
+                                </tr>
+                                <tr>
+                                    <td colspan="2">
+                                        <textarea id="summernote" name="content" required></textarea>
+                                    </td>
                                 </tr>
                             </table>
                         </div>
@@ -67,24 +97,22 @@
 </div>
 <!-- End of Page Wrapper -->
 
-<script src="/bootstrap/vendor/jquery/jquery.min.js"></script>
-<script src="/bootstrap/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-<!-- Core plugin JavaScript-->
-<script src="/bootstrap/vendor/jquery-easing/jquery.easing.min.js"></script>
-
-<!-- Custom scripts for all pages-->
-<script src="/bootstrap/js/sb-admin-2.min.js"></script>
-
-<!-- Page level plugins -->
-<script src="/bootstrap/vendor/chart.js/Chart.min.js"></script>
-
-<!-- Page level custom scripts -->
-<script src="/bootstrap/js/demo/chart-area-demo.js"></script>
-<script src="/bootstrap/js/demo/chart-pie-demo.js"></script>
-
-<!-- 개별 페이지 자바스크립트 영역 -->
-<th:block layout:fragment="script"></th:block>
-
+<script>
+    $(document).ready(function() {
+        $('#summernote').summernote({
+            tabsize: 2,
+            height: 120,
+            toolbar: [
+                ['style', ['style']],
+                ['font', ['bold', 'underline', 'clear']],
+                ['color', ['color']],
+                ['para', ['ul', 'ol', 'paragraph']],
+                ['table', ['table']],
+                ['insert', ['link', 'picture', 'video']],
+                ['view', ['fullscreen', 'codeview', 'help']]
+            ]
+        });
+    });
+</script>
 </body>
 </html>
