--- a/bootstrap_stater/src/main/resources/templates/hrn/orgChart.html
+++ b/bootstrap_stater/src/main/resources/templates/hrn/orgChart.html
@@ -13,58 +13,85 @@
 <th:block layout:fragment="content">
     <!-- Begin Page Content -->
     <div class="container-fluid">
-        <!-- Page Heading -->
-<div class="container-fluid">
+    	<!-- DataTales Example -->
+		<div class="container-fluid">
+			<section class="section">
+				<div class="card shadow mb-4">
+					<div class="card-header py-3">
+						<h6 class="m-0 font-weight-bold">조직도</h6>
+					</div>
 
-                    <!-- Page Heading -->
-                    
-                    <!-- DataTales Example -->
-                    <div class="card shadow mb-4">
-                        <div class="card-header py-3">
-                            <h6 class="m-0 font-weight-bold text-primary">인사현황</h6>
-                        </div>
-                        <div class="card-body">
-                            <div class="table-responsive">
-                                <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4"><div class="row"><div class="col-sm-12 col-md-6"><div class="dataTables_length" id="dataTable_length"><label>Show <select name="dataTable_length" aria-controls="dataTable" class="custom-select custom-select-sm form-control form-control-sm"><option value="10">10</option><option value="25">25</option><option value="50">50</option><option value="100">100</option></select> entries</label></div></div><div class="col-sm-12 col-md-6"><div id="dataTable_filter" class="dataTables_filter"><label>Search:<input type="search" class="form-control form-control-sm" placeholder="" aria-controls="dataTable"></label></div></div></div><div class="row"><div class="col-sm-12"><table class="table table-bordered dataTable" id="dataTable" width="100%" cellspacing="0" role="grid" aria-describedby="dataTable_info" style="width: 100%;">
-                                    <thead>
-                                        <tr role="row"><th class="sorting sorting_asc" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Name: activate to sort column descending" style="width: 229px;">Name</th><th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="Position: activate to sort column ascending" style="width: 344px;">Position</th><th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="Office: activate to sort column ascending" style="width: 167px;">Office</th><th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="Age: activate to sort column ascending" style="width: 82px;">Age</th><th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="Start date: activate to sort column ascending" style="width: 158px;">Start date</th><th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="Salary: activate to sort column ascending" style="width: 143px;">Salary</th></tr>
-                                    </thead>
-                                    <tfoot>
-                                        <tr>
-                                        <th rowspan="1" colspan="1">Name</th>
-                                        <th rowspan="1" colspan="1">Position</th>
-                                        <th rowspan="1" colspan="1">Office</th>
-                                        <th rowspan="1" colspan="1">Age</th>
-                                        <th rowspan="1" colspan="1">Start date</th>
-                                        <th rowspan="1" colspan="1">Salary</th></tr>
-                                    </tfoot>
-	                                    <tbody>
-											<tr>
-												<td>a</td>
-												<td>b</td>
-												<td>c</td>
-												<td>d</td>
-												<td>e</td>
-												<td>f</td>
-											
-											</tr>
+					<!-- Content Area -->
+					<div class="card-body">
+						<div class="d-flex" style="gap: 10px;">
+							<!-- 좌측 영역: 부서 목록 -->
+							<div class="dept-list">
+       							<select id="deptSelect" size="5" onchange="loadEmployees(this.value)">
+           							<option th:each="dept : ${departments}"
+                   							th:value="${dept.id}"
+                   							th:text="${dept.name}">
+									</option>
+      							 </select>
+   							</div>
 
+							<!-- 테이블 -->
+							<div class="flex-grow-1" style="display: block; max-height: 700px; overflow-y: auto; width: 100%; height: auto;">
+								<table class="table table-bsordered">
+									<thead>
+										<tr class="empTable">
+											<th>사원번호</th>
+											<th>부서명</th>
+											<th>직책</th>
+											<th>이름</th>
+											<th>전화번호</th>
+											<th>이메일</th>
+										</tr>
+									</thead>
+									<tbody id="empTableBody">
+										<tr th:each="emp : ${employees}">
+										    <td th:text="${emp.empNo}"></td>
+										    <td th:text="${emp.deptName}"></td>
+										    <td th:text="${emp.position}"></td>
+										    <td th:text="${emp.name}"></td>
+										    <td th:text="${emp.phone}"></td>
+										    <td th:text="${emp.email}"></td>
+										 </tr>					
+									</tbody>
+								</table>
+								
+								<script>
+								    function loadEmployees(deptId) {
+								        fetch('/employees?deptId=' + deptId)
+								            .then(response => response.json())
+								            .then(data => {
+								                const tbody = document.getElementById('empTableBody');
+								                tbody.innerHTML = '';
+								                data.forEach(emp => {
+								                    tbody.innerHTML += `
+								                        <tr>
+								                            <td>${emp.empNo}</td>
+								                            <td>${emp.deptName}</td>
+								                            <td>${emp.position}</td>
+								                            <td>${emp.name}</td>
+								                            <td>${emp.phone}</td>
+								                            <td>${emp.email}</td>
+								                        </tr>
+								                    `;
+								                });
+								            });
+								    }
+								</script>
+								
+							</div>
+						</div>
 
-                                        
-                                        </tbody>
-                                </table></div></div><div class="row"><div class="col-sm-12 col-md-5"><div class="dataTables_info" id="dataTable_info" role="status" aria-live="polite">Showing 1 to 10 of 57 entries</div></div><div class="col-sm-12 col-md-7"><div class="dataTables_paginate paging_simple_numbers" id="dataTable_paginate"><ul class="pagination"><li class="paginate_button page-item previous disabled" id="dataTable_previous"><a href="#" aria-controls="dataTable" data-dt-idx="0" tabindex="0" class="page-link">Previous</a></li><li class="paginate_button page-item active"><a href="#" aria-controls="dataTable" data-dt-idx="1" tabindex="0" class="page-link">1</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="2" tabindex="0" class="page-link">2</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="3" tabindex="0" class="page-link">3</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="4" tabindex="0" class="page-link">4</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="5" tabindex="0" class="page-link">5</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="6" tabindex="0" class="page-link">6</a></li><li class="paginate_button page-item next" id="dataTable_next"><a href="#" aria-controls="dataTable" data-dt-idx="7" tabindex="0" class="page-link">Next</a></li></ul></div></div></div></div>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-		
-		
-
-        
-    </div>
-    <!-- /.container-fluid -->
-
+						<!-- 페이지네이션 -->
+						<section id="pageList"></section>
+					</div>
+				</div>
+			</section>
+		</div>
+	</div>
 </th:block>
 
 <th:block layout:fragment="script">
