--- a/bootstrap_stater/src/main/resources/templates/layouts/layout.html
+++ b/bootstrap_stater/src/main/resources/templates/layouts/layout.html
@@ -25,13 +25,13 @@
 </head>
 <body id="page-top">
     <!-- Page Wrapper -->
-        <th:block th:include="~{fragments/header}"></th:block>
+        <th:block th:insert="~{fragments/header}"></th:block>
 
         <!-- 개별 페이지 내용 -->
         <th:block layout:fragment="content"></th:block>
 
     <!--  공통 푸터 -->
-    <footer th:include="~{fragments/footer}"></footer>
+    <footer th:insert="~{fragments/footer}"></footer>
 
 <!-- 공통 자바스크립트 영역 -->
 <!--<script th:src="@{/js/jquery-3.7.1.js}"></script>-->
