인사현황 추가

--- a/bootstrap_stater/src/main/resources/templates/layouts/layout.html
+++ b/bootstrap_stater/src/main/resources/templates/layouts/layout.html
@@ -51,7 +51,7 @@
     <!-- Page level custom scripts -->
     <script src="/bootstrap/js/demo/chart-area-demo.js"></script>
     <script src="/bootstrap/js/demo/chart-pie-demo.js"></script>
-
+	<script src="/bootstrap/js/demo/chart-bar-demo.js"></script>
 <!-- 	table script -->
     <script src="/bootstrap/vender/datatables/dataTables.bootstrap4.min.js"></script>
 
