personnel css 추가

--- a/bootstrap_stater/src/main/resources/templates/hrn/personnelRegist.html
+++ b/bootstrap_stater/src/main/resources/templates/hrn/personnelRegist.html
@@ -12,8 +12,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
-<link href="/css/personnel.regist.css" rel="stylesheet" type="text/css">
-<link href="/css/personnel.regist2.css" rel="stylesheet" type="text/css">
+<link href="/personnel/css/personnel.regist.css" rel="stylesheet" type="text/css">
+<link href="/personnel/css/personnel.regist2.css" rel="stylesheet" type="text/css">
     
 </head>
 <body>
