--- a/bootstrap_stater/src/main/resources/templates/fragments/header.html
+++ b/bootstrap_stater/src/main/resources/templates/fragments/header.html
@@ -233,7 +233,7 @@
                                         Spending Alert: We've noticed unusually high spending for your account.
                                     </div>
                                 </a>
-                                <a class="dropdown-item text-center small text-gray-500" href="#">Show All Alerts</a>
+                                <a class="dropdown-item text-center small" style="color: black;" th:href="@{/approval/approval_list(status='pending')}">전자결재 대기목록 페이지로 바로가기</a>
                             </div>
                         </li>
 
