--- a/bootstrap_stater/src/main/resources/templates/approval/drafting_form.html
+++ b/bootstrap_stater/src/main/resources/templates/approval/drafting_form.html
@@ -20,9 +20,13 @@
     <link href="/bootstrap/css/sb-admin-2.min.css" rel="stylesheet" />
 
     <link href="https://cdn.jsdelivr.net/npm/summernote@0.9.0/dist/summernote-lite.min.css" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css">
 
     <!--<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>-->
-
+    
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
+	
     <script src="/bootstrap/vendor/jquery/jquery.min.js"></script>
     <script src="/bootstrap/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
@@ -31,8 +35,13 @@
 
     <!-- Custom scripts for all pages-->
     <script src="/bootstrap/js/sb-admin-2.min.js"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/summernote@0.9.0/dist/summernote-lite.min.js"></script>
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
+	
+	<script src="https://cdn.jsdelivr.net/npm/summernote@0.9.0/dist/summernote-lite.min.js"></script>
 
 
 </head>
@@ -43,53 +52,128 @@
         <!-- Main Content -->
         <div id="content">
             <div class="container-fluid">
-                <!-- Page Heading -->
-                <h1 class="h3 mb-2 text-gray-800"></h1>
-                <p class="mb-4"></p>
-                <!-- DataTales Example -->
-                <div class="card shadow mb-4">
-                    <div class="card-header py-3">
-                        <h6 class="m-0 font-weight-bold text-primary">기안서 작성</h6>
-                    </div>
-                    <div class="card-body">
-                        <div class="table-responsive">
-                            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                                <tr>
-                                    <td>일자</td>
-                                    <td>
-
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>제목</td>
-                                    <td>
-                                        <input type="text" name="title" class="form-control bg-light border-0 small"
-                                               placeholder="" aria-label=""
-                                               aria-describedby="basic-addon2">
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>결재자</td>
-                                    <td><input type="text" name="title" class="form-control bg-light border-0 small"
-                                               placeholder="" aria-label=""
-                                               aria-describedby="basic-addon2"></td>
-                                </tr>
-                                <tr>
-                                    <td>첨부</td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td colspan="2">
-                                        <textarea id="summernote" name="content" required></textarea>
-                                    </td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-
+				
+				  <div class="panel panel-primary">
+				    <div class="panel-heading">
+				      <h3 class="panel-title">기안서작성 | 지출결의서</h3>
+				    </div>
+				    <div class="panel-body">
+				      <form class="form-horizontal" th:action="@{/appr}" th:object="${apprDTO}" method="post" enctype="multipart/form-data">
+				        
+				        <div class="form-group">
+						  <label class="col-sm-2 control-label" for="datepicker">일자</label>
+						  <div class="col-sm-4">
+						    <div class="input-group date datepicker">
+						      <input type="text" class="form-control datepicker" th:field="*{createDate}" placeholder="YYYY-MM-DD" readonly required>
+						      <span class="input-group-addon">
+						        <span class="glyphicon glyphicon-calendar"></span>
+						      </span>
+						    </div>
+						  </div>
+						</div>
+				        
+				       <!--  <div class="input-group">
+							<div class="input-group-prepend">
+								<span class="input-group-text">
+									<i class="far fa-calendar-alt"></i>
+								</span>
+							</div>
+							<input type="text" class="form-control float-right" id="reservation" name="DAYS" readonly="readonly">
+							<input type="hidden" id="startDate" name="START_DATE">
+							<input type="hidden" id="endDate" name="END_DATE">
+						</div> -->
+				
+				        <div class="form-group">
+				          <label class="col-sm-2 control-label">제목</label>
+				          <div class="col-sm-8">
+				            <input type="text" th:field="*{title}" class="form-control" maxlength="200" required>
+				          </div>
+				        </div>
+				
+				        <!-- <div class="form-group">
+				          <label class="col-sm-2 control-label">결재라인</label>
+				          <div class="col-sm-8">
+				            <input type="text" class="form-control" placeholder="결재라인" disabled>
+				          </div>
+				        </div>
+				        -->		
+				        <div class="form-group">
+				          <label class="col-sm-2 control-label">결재자</label>
+				          <div class="col-sm-8">
+				            <!-- <input type="text" th:field="*{approverId}" class="form-control"   style="width:150px; display:inline;"> -->
+				            <input type="text" class="form-control"   style="width:150px; display:inline;">
+				          </div>
+				        </div>
+				
+				        <!-- <div class="form-group">
+				          <label class="col-sm-2 control-label">참조자</label>
+				          <div class="col-sm-8">
+				            <input type="text" name="referrer" class="form-control" placeholder="참조자">
+				          </div>
+				        </div> -->
+				
+				        <!-- <div class="form-group">
+				          <label class="col-sm-2 control-label">공유자</label>
+				          <div class="col-sm-8">
+				            <input type="text" name="shared" class="form-control" placeholder="공유자">
+				          </div>
+				        </div> -->
+				
+				        <div class="form-group">
+				          <label class="col-sm-2 control-label">구분</label>
+				          <div class="col-sm-4">
+				            <input type="text" th:field="*{reqType}" class="form-control" placeholder="구분">
+				          </div>
+				          
+				          <!-- <label class="col-sm-2 control-label">출력양식</label>
+				          <div class="col-sm-4">
+				            <select name="output_format" class="form-control">
+				              <option value="default">기본양식(결재문서 별도 인쇄)</option>
+				            </select>
+				          </div> -->
+				        </div>
+				
+				        <div class="form-group">
+				          <label class="col-sm-2 control-label">결재문서</label>
+				          <div class="col-sm-8">
+				            <a href="#" class="btn btn-link">전표 출력물</a>
+				          </div>
+				        </div>
+				
+				        <div class="form-group">
+				          <label class="col-sm-2 control-label">첨부</label>
+				          <div class="col-sm-8">
+				            <a href="#" class="btn btn-info">추가</a>
+				          </div>
+				        </div>
+				        
+				        <div class="form-group">
+				          <label class="col-sm-2 control-label">라벨</label>
+				          <div class="col-sm-8">
+				           <!--  <input type="text" class="form-control" placeholder="라벨"> -->
+				          </div>
+				        </div>
+				
+				        <div class="form-group">
+				          <div class="col-sm-offset-2 col-sm-10">
+				            <button type="submit" class="btn btn-primary">저장/결재(F7)</button>
+				            <button type="button" class="btn btn-default">미리보기</button>
+				            <button type="button" class="btn btn-default">양식샘플보기</button>
+				            <button type="button" class="btn btn-default">My도장/서명</button>
+				            <button type="button" class="btn btn-default">닫기</button>
+				          </div>
+				        </div>
+				        
+				        <div class="form-group">
+				          <label class="col-sm-2 control-label" for="summernote">에디터 내용</label>
+				          <div class="col-sm-8">
+				            <textarea class="form-control" id="summernote" th:field="*{content}" required></textarea>
+				          </div>
+				        </div>
+				      </form>
+				    </div>
+				  </div>
             </div>
-
         </div>
     <!-- End of Main Content -->
     </div>
@@ -98,21 +182,29 @@
 <!-- End of Page Wrapper -->
 
 <script>
-    $(document).ready(function() {
-        $('#summernote').summernote({
-            tabsize: 2,
-            height: 120,
-            toolbar: [
-                ['style', ['style']],
-                ['font', ['bold', 'underline', 'clear']],
-                ['color', ['color']],
-                ['para', ['ul', 'ol', 'paragraph']],
-                ['table', ['table']],
-                ['insert', ['link', 'picture', 'video']],
-                ['view', ['fullscreen', 'codeview', 'help']]
-            ]
-        });
-    });
+    $(function () {
+    	 $('.datepicker').datetimepicker({
+    	    format: 'YYYY-MM-DD',
+    	    locale: 'ko',
+    	    ignoreReadonly: true,
+    	    useCurrent: false,
+    	    showTodayButton: true
+    	  });
+    	  
+    	  $('#summernote').summernote({
+              tabsize: 2,
+              height: 120,
+              toolbar: [
+                  ['style', ['style']],
+                  ['font', ['bold', 'underline', 'clear']],
+                  ['color', ['color']],
+                  ['para', ['ul', 'ol', 'paragraph']],
+                  ['table', ['table']],
+                  ['insert', ['link', 'picture', 'video']],
+                  ['view', ['fullscreen', 'codeview', 'help']]
+              ]
+          });
+    	});
 </script>
 </body>
 </html>
