일단 작업 파일

--- a/bootstrap_stater/src/main/resources/templates/hrn/personnelRegist.html
+++ b/bootstrap_stater/src/main/resources/templates/hrn/personnelRegist.html
@@ -51,36 +51,34 @@
 
 										<!-- 전화번호 -->
 										<th scope="row" class="custom-th">
-											<label for="emp_ph" class="form-label">전화번호</label></th>
+											<label for="emp_ph" class="form-label">주민번호</label></th>
 										<td colspan="3" class="custom-td">
 											<input type="text" class="form-control w-75" id="emp_ph" name="emp_ph">
 											<span id="checkPhoneResult"></span>
 										</td>
 
 										<!-- 생년월일 -->
-										<th scope="row" class="custom-th">
-											<label for="emp_bd" class="form-label">생년월일</label></th>
-										<td colspan="3" class="custom-td">
-											<input type="text" class="form-control w-75" id="emp_bd" name="emp_bd" placeholder="생년월일 6자리 (예:950211)" maxlength="6"></td>
+										<th scope="row">
+											<label for="emp_em" class="form-label">이메일</label>
+										</th>
+										<td colspan="3">
+											<input type="text" class="form-control w-75" id="emp_em" name="emp_em" placeholder="aaa@naver.com">
+											<span id="checkEmailResult"></span>
+										</td>
 									</tr>
 
 									<tr>
 										<!-- 성별 -->
-										<th scope="row" class="custom-th">
-											<label for="emp_sb" class="form-label">성별</label></th>
-										<td colspan="3" class="custom-td">
-											<div class="form-check form-check-inline">
-												<input type="radio" class="form-check-input" id="emp_sb_m" name="emp_sb" value="남자"> 
-													<label class="form-check-label" for="emp_sb_m">남</label>
-											</div>
-											<div class="form-check form-check-inline">
-												<input type="radio" class="form-check-input" id="emp_sb_f" name="emp_sb" value="여자"> 
-													<label class="form-check-label" for="emp_sb_f">여</label>
-											</div>
-										</td>
+									
 										<!-- 이메일 -->
 										<th scope="row">
 											<label for="emp_em" class="form-label">이메일</label></th>
+										<td colspan="3">
+											<input type="text" class="form-control w-75" id="emp_em" name="emp_em" placeholder="aaa@naver.com">
+											<span id="checkEmailResult"></span>
+										</td>
+										<th scope="row">
+											<label for="emp_em" class="form-label">입사일</label></th>
 										<td colspan="3">
 											<input type="text" class="form-control w-75" id="emp_em" name="emp_em" placeholder="aaa@naver.com">
 											<span id="checkEmailResult"></span>
@@ -175,7 +173,6 @@
 								</tbody>
 							</table>
 						
-							<br> <br>
 							<div align="right">
 								<button type="button" class="btn btn-secondary" onclick="history.back()">취소</button>
 								<button type="submit" class="btn btn_main_color" id="registerBtn">등록</button>
