--- a/bootstrap_stater/src/main/resources/templates/gw/schWrite.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/schWrite.html
@@ -28,15 +28,15 @@
             </div>
 
             <div class="form-group">
-              <label for="date">날짜</label>
-              <input type="date" class="form-control" id="date" name="date" required>
+              <label for="startDate">시작일</label>
+              <input type="date" class="form-control" id="startDate" name="startDate" required>
             </div>
-
+            
             <div class="form-group">
-              <label for="time">시간</label>
-              <input type="time" class="form-control" id="time" name="time">
+              <label for="endDate">종료일</label>
+              <input type="date" class="form-control" id="endDate" name="endDate" required>
             </div>
-
+            
             <button type="submit" class="btn btn-primary">등록</button>
           </form>
         </div>
