--- a/bootstrap_stater/src/main/resources/templates/gw/schedule.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/schedule.html
@@ -24,9 +24,9 @@
 							class="card-header py-3 d-flex justify-content-between align-items-center"
 							data-toggle="collapse" role="button" aria-expanded="true"
 							aria-controls="collapse2">
-							<h6 class="m-0 font-weight-bold text-primary">전체 일정관리</h6>
+							<h6 class="m-0 font-weight-bold">전체 일정관리</h6>
 						</a> <a th:href="@{/groupware/schWrite}"
-							class="btn btn-sm btn-success">일정 등록</a>
+							class="btn btn-sm btn-primary">일정 등록</a>
 					</div>
 					<div class="collapse show" id="collapse1">
 						<div class="card-body">
@@ -46,9 +46,9 @@
 							class="card-header py-3 d-flex justify-content-between align-items-center"
 							data-toggle="collapse" role="button" aria-expanded="true"
 							aria-controls="collapse2">
-							<h6 class="m-0 font-weight-bold text-primary">부서별 일정관리</h6>
+							<h6 class="m-0 font-weight-bold">부서별 일정관리</h6>
 						</a> <a th:href="@{/groupware/schWrite}"
-							class="btn btn-sm btn-success">일정 등록</a>
+							class="btn btn-sm btn-primary">일정 등록</a>
 					</div>
 					<div class="collapse show" id="collapse2">
 						<div class="card-body">
