--- a/bootstrap_stater/src/main/resources/templates/fragments/header.html
+++ b/bootstrap_stater/src/main/resources/templates/fragments/header.html
@@ -119,7 +119,7 @@
                 <div id="collapsePay" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">공지사항 메뉴:</h6>
-                        <a class="collapse-item" th:href="@{/groupware/notice}">공지사항</a>
+                        <a class="collapse-item" th:href="@{/notice}">공지사항</a>
 <!--                         <a class="collapse-item" th:href="@{/groupware/eNotice}">부서별 공지사항</a> -->
                         <h6 class="collapse-header">회사일정 메뉴:</h6>
                         <a class="collapse-item" th:href="@{/groupware/schedule}">일정관리</a>
