css추가 html js 수정

--- a/bootstrap_stater/src/main/resources/templates/hrn/personnelApp.html
+++ b/bootstrap_stater/src/main/resources/templates/hrn/personnelApp.html
@@ -136,7 +136,7 @@
                         <div class="employee-info-section">
                             <h6>선택된 사원 정보</h6>
                             <div class="mb-2">
-                                <strong>이름:</strong> <span id="selectedEmployeeName">선택되지 않음</span>
+                                <strong>이름:</strong> <span id="selectedEmployeeName"></span>
                             </div>
                             <div class="mb-2">
                                 <strong>사원번호:</strong> <span id="selectedEmployeeId"></span>
